* removed unused code * changed icons * appfactory script is working now

--- a/template/appfactory.app.template/Contents/Info.plist
+++ b/template/appfactory.app.template/Contents/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>org.netcorex.appfactory</string>
   <key>CFBundleIconFile</key>
-  <string>macruby.icns</string>
+  <string>ruby.icns</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
